@@ -11,23 +11,15 @@ AUX xerces-c-3.0.0-gcc4.2-darwin.patch 473 SHA256 e96bf72c1e5f8320f15e9a3d4aed04
 AUX xerces-c-3.0.1-CVE-2009-2625.patch 26741 SHA256 da95a0890c307ca3998c60dd65db675522570c460d010c8962996193b444f87a SHA512 a2ee0656a0c88841584a07a2105c1339506bb97bf973823a49d43159c0725b2e51947025b1be044bb5868e5c254ba1427cbc16a79af56ad52e96153c635e6321 WHIRLPOOL a618499595a3560b50c4ff46be3248a92540036868e4fb72661cff42467618a5ebf3dfd397e606e100ebfb052b52390cd1718bf32807292a09c1f2911045994a
 AUX xerces-c-3.0.1-libicu.patch 1384 SHA256 7260ac41e43ab775406a6637d2b91d2f15737fa8232e5872ee800d0d25793d4f SHA512 36812906d9a64d9a3ea5b8ebc1097850f92af01d264cdec6f0f157d71806115814a9bdbfa8e7f7140f863119dcf03edc80a6346295e38d541336266e5da7ea87 WHIRLPOOL 38af7a9e28228cae57067b6b3a544c18965a4fd2ce3bc1e1df3bb0dced5064589a214d9f78d3d98dec35dfad17839a7c28c9b7d25f913e1ccb656a7fccd71289
 AUX xqilla-xercesc_regex.patch 46363 SHA256 3c2ad2a107ff8b27ab719571b60cb786c4967c2796343928d9ecd3adb3e87d24 SHA512 0476d47834cb26fb3adea0e83aa5b87b505b34d8391148b194bd6d17f7505aea0ddbb8e6859034e383375f178346b5c8cee8821663f95fec7ce68da6724578a7 WHIRLPOOL 5477ca15ee9ca86738fe63ee756ed053b65b5714387718a12298cf4ed0a587c642c6d77288a6b2fa809190278a2f10b60850d37013f4869bf09c247215ea4103
-DIST xerces-c-3.0.0.tar.gz 4605395 SHA256 ae2ff10d4bb12b120568d781f03056d7b4d1e2742858d3b7bb535a4a791f92a1 SHA512 727c86c81eef4bb36bd84e464e4dff3e8918825ac24088f5ccf3f193b8a233f1580236372eb75bee61294d0d57afaa72ad33ca88bf194ad663600acd86494c22 WHIRLPOOL 9549b49692175e22aa4e40c8fb98d2a2ec331f8d8009c1afcddb4b94829382a791a6441dac0aed67ba32cb2fee26e6adec449bb872e7d5b8da3a4a3cf06b3140
-DIST xerces-c-3.0.1.tar.gz 4605970 SHA256 f7d28e0859ef7697a4ec19328ff5105ddd78ae3069d6a014d64efb298f996640 SHA512 e03027c9983f92eb1ca149b6f062181acf3f885ffa6bbddb0be47f579e66816ebb261f1a2b001205a68d0bdf6a215d28f86a3253ed286ae4cf495c2e6b4d62f6 WHIRLPOOL 5a999baa7a326f8b5dad10195388f9649246d417aa139d94e97c4a8d52fec5a6a7bb0e164b78bc12f0605f990cdb626a172573fddeec0abec6225651c13e4cfa
-DIST xerces-c-3.1.0.tar.gz 4979277 SHA256 e04572727f6669474d315b61d805d8f38941f4a7b63560d43d2f5ca61596a5ad SHA512 dbc1ff61663afff1a42381d332590f55a4c272fb9d91dfc38ba0c2d03cd6ba9d8fcc017b4db1e074697bbd527f5e67048e24f477c0fd0a07690fdc0c73d95285 WHIRLPOOL a1155c0290fdb77aa9f0ea96b35f973ed944ea51a54b8f6478539807d077f440ac9018786a1951c56aa9d91ea482dcd4752d83815276dcc89b959cc3ce0d8aaa
 DIST xerces-c-3.1.1.tar.gz 5051308 SHA256 a42785f71e0b91d5fd273831c87410ce60a73ccfdd207de1b805d26d44968736 SHA512 bf9d139e0d921d59a14813884548380d0f6040cce6759ce45d8af2832720513f2781ea4d88cf73c6d5c5ffe83b17be3ce0cb40cdf536046736fbf9be386e9841 WHIRLPOOL 9c9d6c8f62536b0f2112f8061eb59bd8d4478fc56d32682eb56d1ca85c46d8530c7c9b09dafd8dca718d0a6375198368a3d09e6442ab8508cb8dc12de81fa27d
-EBUILD xerces-c-3.0.0-r1.ebuild 2520 SHA256 9016c811fb12d19cfe46f45edb53feb36a389f04056dbd44b95fee4685a398e2 SHA512 c2ea7d117274309ab1c67676e57755f03fb293ca29c425a942f53ffd3fb4553273865281ae855df5a62e5bcb9e78f74ed2131dd2fa1136817dd39413bd2a454e WHIRLPOOL 1ce5b210e1b6a59d3d6de146b4f72e54faf164cc301fda3994765165171512db2ae174f4f0b06352679f8b608087ea4a05b7b393a38891f15fda37f42e18551a
-EBUILD xerces-c-3.0.0.ebuild 2611 SHA256 8fb2530a52d4d46855f710c3bb71200875cbdbc47a389abf71752ac39a268a57 SHA512 90ea007bd103cacbd195e6c89a272eaa66b9f18a65babd677442c0c8fa33536e48e9042f8ee806b213b20ffd1694b6e9eb77cf171f0102768649e3cde1b47670 WHIRLPOOL b5e5365013742c18ae7ab73020edb9ad7f3fa3e5437ac8585971c4b258658a46a644e789dffd3e32ea9fe2739503eecb431fab9891452a5accc2ed44c5cc8471
-EBUILD xerces-c-3.0.1-r1.ebuild 2853 SHA256 7728d64b28a9bbc4cfca95ec98ff8dd20b43ab3b2abe2edf4aedd0efe7f8fe8f SHA512 3de107fde7b683e38a7625a14a7b9d38b814ce45e7974633d0cf5abe0a3163172d41cff9cb71aea0cd4c3cdce1e79ae8a6dd49d8878d9dd84d1883015625f715 WHIRLPOOL f111ad9833b1b2f676aa825d42c45f8da4a28f676376085a49a19cbc9cc8afe8f24fa796be76b1c40047f0440d34669d8a06af46a8e8c5c3c29b017c7317b74a
-EBUILD xerces-c-3.0.1.ebuild 2527 SHA256 909b9b7e80f63c998d7adf4c247d61183357988d3efe06ecb67f632d2ae1d76e SHA512 19bd5303cd150403c76d57fee5dd714526cc2c0f05386e3add6197d111c2091d71b276be4e1eb4c62431db81f08075a501352a79c8e103ccb9b09f557b14ead5 WHIRLPOOL 29805c54dd566f2f47d133329dcb768b591f5b40e3663d2d58aa5ba97099e8ad33713ddaddca341ef9fc637d1d4b9ff42dbcec1027ae21423a98bd2a8fc8ec30
-EBUILD xerces-c-3.1.0.ebuild 2847 SHA256 c5e85b506da9f753c59897d137baad3142b4ed513d5a16d94f26f931bd80afe0 SHA512 d9c589322d23b96ad614110560640fd812158bd6ed8d414840fafae9a35250f59bea79b1f114d43841d6c3b0e541142293eb6ca145133bbcf736f4addb7bdffe WHIRLPOOL 059d3b9a9aa0cd66f512101621e0123e8741ff71b56c962b2800d318b445e4ab525a37a5ce85c3f430360b1517dfd8b7ae5f7a3a346c704e6e554eda5c926762
-EBUILD xerces-c-3.1.1-r1.ebuild 2852 SHA256 d918197b4e7162cb4cc73fbd86edc0ab16ecd7120a7f15a15c88f3196a54671b SHA512 47a682d0692b00b833a0e76032ea08b620fdb20f0f95d15985b59049fa15d58615a6e2ac783cc2183bdd49925032b09f9f60d6893ee4004efe4312930b1a792f WHIRLPOOL bfc98aa67d1712197d3262741cc8c7c9d4810c27ce0b880a35bd9e75a4cff42137f9bfb4108930034267334015ce795ed78cf7583ababdcd8ebeb3e4484c848c
+EBUILD xerces-c-3.1.1-r1.ebuild 2852 SHA256 4556a642e47b334bd095dd26946817593129eb29f5145abb004421a2eb5d1666 SHA512 fb9be625e4919c9bc836af5d8383364df0b1fcffe1ecdeb3e99744f30afd43bdbcd904739e1a2a4e21c8626f9c84c583455c705e890aa9951b7e97208319f883 WHIRLPOOL 6f32d88d986b337ca6538325f456ce9183256db40f418d7db17a956f72f0f746b167973eec4da2d0f7e3af675a671cd0ce59bc361cf2401f39a61ac7e8067ecd
 EBUILD xerces-c-3.1.1.ebuild 2923 SHA256 b2417990d8e0b5f92479d35bc237b430225ea9580f7ac6948f4b5599d085188a SHA512 44fe0f39facd8448db0ea0a6fdd4ea895ffd43d660f4d3bc7b72cebab09c307c7c1151e6f5a9bb98c4ed4507b86bfa3839ee6886c9d9a71a079f4edaf6aaa372 WHIRLPOOL b2284064253b017078da06c30e370a319253405fecf28f0b2234b93c7561d97c1de18915121d8b32f58f5ee2c0e526b697bc6e87367c984027eb96c57c254f08
-MISC ChangeLog 16658 SHA256 3a5b9c54243a5fb7daf562cad9d0122db188b0a2f7d16600dcb584fb76b093e2 SHA512 eda8bd4228ebb744699bca829bdbc9ff8849f5bf41e213562346e7fbc37e7945bf0ce79f050eca92157ad6e39c2cfa8d9eca30f2b1c635b433037a34c5186f1f WHIRLPOOL 4aa0edb24eaf25e57895a424103a7cbff583683d9a1ad6efaad539589f70af6c7ba5d3c7364ea27f8ba38ade91af1f856d87b79c1fbb155c9fae73d8b16856f2
+MISC ChangeLog 16900 SHA256 4ca67ed46768c6103f4e04acd2368b7122057a96390bad2772f17c05f3a92dbf SHA512 bf263c9b5e22c1d71105df63594e1709aecc8deef2d74054d897e4d57bc0b73453c54ad3abc83ac122a1a10f607d5f631a0b91f696d399dd7c51d3f8e36dd37e WHIRLPOOL b05f85ccc234a0ecc7c221ea7c9e63fd13e92c9786848116e74da0221d5fc7dba74dc77f82773147a73561b32e6777da28d1f38c8a041d9fe212a6c138018a6b
 MISC metadata.xml 758 SHA256 baa80e7aae58f2e6b6905af42624321cf417c725352d515b162907496fafc0db SHA512 e28fa67987318e3bceb8cc3b9129d6439ff5c441c21f1ef1db7be801d9b4080c2f14105583d3544190afe4e28d2dc965bed11512193db8e077243e87608e030a WHIRLPOOL ad3b26ce25c4a0bebc314f5f5fbc91e8c18a6159c55c191ab74c2efd0014ce8463654234fe4c935352f52dc892a96509852a03f3745e0c94994f764a76830782
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (SunOS)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlCK2t8ACgkQX3X2B8XHTolEowCdHWvNief0ViQDqsssEWsmx9aT
-Q6EAn1tSWj6cZW4Yzc/OkZKDTyAxwy/L
-=0eGN
+iEYEAREIAAYFAlRAJ9IACgkQX3X2B8XHTomTfwCfd4ZB1u9TZP02Rhq1PnNCd1e4
+YpMAn2OQU1KMzLu4t0kr9S4qeEO9XDud
+=8036
 -----END PGP SIGNATURE-----
